--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Miratech1/743999698051706-front-end-developer'>Miratech Front-End Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -74,7 +82,7 @@
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://metalshub.join.com/jobs/466379-frontend-developer-m-f-d'>Job @ Metals Hub (D?sseldorf): Frontend Developer ... | JOIN</a></h5> 
+<h5><a href='https://metalshub.join.com/jobs/466379-frontend-developer-m-f-d'>Job @ Metals Hub (D?sseldorf): Frontend Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -122,7 +130,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6462019-frontend-developer'>
+<h5><a href='https://syone2.recruitee.com/o/ref-6462019-frontend-developer'>
       (Ref. 646/2019) Frontend Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -310,7 +318,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Z?rich, Switzerland  San Francisco Zurich, Switzerland San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/o6robfwQ'>NICE Careers - Expert Front-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/o6robfwQ'>NICE Careers - Expert Front-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -332,7 +340,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://archilogic.join.com/jobs/463118-frontend-engineer'>Job @ Archilogic (Z?rich): Frontend Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/463118-frontend-engineer'>Job @ Archilogic (Z?rich): Frontend Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -380,7 +388,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4065693002?gh_src=f1d56d1e2'>Job Application for Frontend Engineer (Hiring for Multiple Teams) at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4065693002?gh_src=f1d56d1e2'>Job Application for Frontend Engineer (Hiring for Multiple Teams) at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -388,7 +396,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/460357-senior-front-end-web-developer'>Job @ Onedot (Schlieren): Senior Front-End Web Dev... | JOIN</a></h5> 
+<h5><a href='https://onedot.join.com/jobs/460357-senior-front-end-web-developer'>Job @ Onedot (Schlieren): Senior Front-End Web Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Schlieren, Switzerland</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -418,7 +426,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mitel/job/oNvpbfwC'>Mitel Careers - Front-End Cloud Developer (Junior)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mitel/job/oNvpbfwC'>Mitel Careers - Front-End Cloud Developer (Junior)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -448,16 +456,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://boards.greenhouse.io/omaze/jobs/4493863002'>Job Application for Front-end Developer Consultant at Omaze</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o7cQafw3&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=ntnhlMwJ'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Engineering Platform</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois</span></p>
-<p>Posted on:: 2019-10-26</p>
-<hr/>
-<h5><a href='https://viktor.recruitee.com/o/frontend-developer-react'>
-      Frontend developer React - VIKTOR
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
